troubleshooting layout issues

--- a/src/pages/CheatSheets/Css/Flexbox/FlexboxCheatSheet.styles.css
+++ b/src/pages/CheatSheets/Css/Flexbox/FlexboxCheatSheet.styles.css
@@ -55,11 +55,7 @@
     align-content: center;
     align-items: center;
     justify-content: center;
-    height: calc(
-      100vh - (var(--button-actionable-mobile-height) * 2) -
-        var(--title-header-mobile-height) - env(safe-area-inset-bottom) -
-        env(safe-area-inset-top)
-    );
+    height: calc(100vh - (var(--button-actionable-mobile-height) * 2) - 6rem);
   }
 }
 
